--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -270,7 +270,7 @@
       slide: 'div',
       dots: true,
       arrows: true,
-      autoplay: ture,
+      autoplay: true,
       infinite: false,
       speed: 300,
       draggable: true,
