--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -242,7 +242,7 @@
   <div class="py-12 flex flex-col items-center container px-3 lg:px-6 ">
 
 
-    <div class="slide_slick ">
+    <div class="slide_slick w-full">
 
       {% for otherProduct in otherProducts %}
       <div style="height:290px;width: 270px;">
