--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -242,7 +242,7 @@
   <div class="py-12 flex flex-col items-center container px-3 lg:px-6 ">
 
 
-    <div class="slide_slick w-full flex flex-row items-center">
+    <div class="slide_slick w-full ">
 
       {% for otherProduct in otherProducts %}
       <div style="height:290px;width: 270px;">
@@ -277,8 +277,7 @@
       autoplaySpeed: 10000,
       pauseOnHover: true,
       vertical: false,
-      prevArrow: "<button type='button' class='slick-prev text-white'>Previous</button>",
-      nextArrow: "<button type='button' class='slick-next text-white'>Next</button>",
+
       slidesToShow: 4,
       slidesToScroll: 4,
       responsive: [{
