--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-  <link rel="stylesheet" type="text/css" href="{% static slick/slick.css %}" />
-  <script type="text/javascript" src="{% static slick/slick.js %}"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'slick/slick.css' %}" />
+  <script type="text/javascript" src="{% static 'slick/slick.js' %}"></script>
   <title>{% block page_name %} {% endblock page_name %} | KNFT</title>
 
   {% if request.resolver_match.url_name == "detail" %}
