--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -279,6 +279,8 @@
       vertical: false,
       slidesToShow: 4,
       slidesToScroll: 4,
+      prevArrow: "<button type='button' class='slick-next'>Next</button>",
+      nextArrow: "<button type='button' class='slick-prev'>Prev</button>",
       responsive: [{
         breakpoint: 1024,
         settings: {
