--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="{% static 'slick/slick.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'slick/slick-theme.css' %}" />
   <script type="text/javascript" src="{% static 'slick/slick.js' %}"></script>
   <title>{% block page_name %} {% endblock page_name %} | KNFT</title>
 
