--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -281,13 +281,14 @@
       slidesToScroll: 4,
       prevArrow: "<button type='button' class='slick-next'>Next</button>",
       nextArrow: "<button type='button' class='slick-prev'>Prev</button>",
+      dotsClass: "slick-dots",
       responsive: [{
         breakpoint: 1024,
         settings: {
           slidesToShow: 3,
           slidesToScroll: 3,
-          infinite: true,
-          dots: true
+
+
         }
       }, {
         breakpoint: 600,
