--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -245,8 +245,8 @@
     <div class="slide_slick w-full ">
 
       {% for otherProduct in otherProducts %}
-      <div style="height:290px;width: 270px;">
-        <a href="/product/{{otherProduct.pk}}" class="h-full w-full">
+      <div style="height:290px;width: 270px;" class="p-3">
+        <a href="/product/{{otherProduct.pk}}" class="h-full w-full ">
           {% if otherProduct.image.content_type == "mp4" %}
           <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px;">
             <source src="{{otherProduct.image.file360.url}}" />
@@ -264,12 +264,16 @@
 
   </div>
 </div>
+<style>
+  .slide {
+    height: 100%;
+    padding: 10px;
+  }
+</style>
 <script>
   $(document).ready(function() {
     $('.slide_slick').slick({
       slide: 'div',
-      dots: true,
-      arrows: true,
       autoplay: true,
       infinite: false,
       speed: 300,
@@ -280,7 +284,8 @@
       slidesToShow: 4,
       slidesToScroll: 4,
       variableWidth: true,
-
+      variableHeight: true,
+      rows: 0,
       responsive: [{
         breakpoint: 1024,
         settings: {
@@ -300,6 +305,8 @@
           slidesToScroll: 1
         }
       }]
+    }).on('setPosition', function(event, slick) {
+      slick.$slides.css('height', slick.$slideTrack.height() + 'px');
     });
 
 
