--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -245,14 +245,14 @@
     <div class="slide_slick w-full">
 
       {% for otherProduct in otherProducts %}
-      <div style="max-height:290px" class="p-3 w-full">
-        <a href="/product/{{otherProduct.pk}}" class="h-full w-full ">
+      <div style="max-height:300px;max-width:290px;" class="p-3 ">
+        <a href="/product/{{otherProduct.pk}}">
           {% if otherProduct.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  w-full " playsinline style="height:290px;">
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " playsinline style="height:290px;width:280px;">
             <source src="{{otherProduct.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover w-full " style="height:290px;" />
+          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover " style="height:290px;width:280px;" />
           {% endif %}
         </a>
       </div>
