--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -258,10 +258,13 @@
       </div>
 
       {% endfor %}
-
     </div>
 
 
+  </div>
+  <div class="flex flex-row items-center justify-center">
+    <button class='slide-prev'><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+    <button class='slide-next'><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
   </div>
 </div>
 <style>
@@ -286,6 +289,8 @@
       variableWidth: true,
       variableHeight: true,
       rows: 0,
+      arrows: true,
+      dots: false,
       responsive: [{
         breakpoint: 1024,
         settings: {
@@ -307,6 +312,15 @@
       }]
     }).on('setPosition', function(event, slick) {
       slick.$slides.css('height', slick.$slideTrack.height() + 'px');
+    });
+    $('.slide-prev').click(function(e) {
+      //e.preventDefault(); 
+      $('.slider-two').slick('slickPrev');
+    });
+
+    $('.slide-next').click(function(e) {
+      //e.preventDefault(); 
+      $('.slider-two').slick('slickNext');
     });
 
 
