--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -286,10 +286,10 @@
       variableWidth: true,
       variableHeight: true,
       rows: 0,
-      arrows: true,
+      arrows: false,
       dots: false,
-      prevArrow: '<button class="slide-arrow prev-arrow"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>',
-      nextArrow: '<button class="slide-arrow next-arrow"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>',
+      prevArrow: "<button type='button' class='slick-prev pull-left'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
+      nextArrow: "<button type='button' class='slick-next pull-right'><i class='fa fa-angle-right' aria-hidden='true'></i></button>",
       responsive: [{
         breakpoint: 1024,
         settings: {
