--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -116,7 +116,7 @@
         <img src="{{product.image.file800.url}}" />
         {% endif %}
       </div>
-      <div class="flex flex-col items-start justify-between pl-6 w-full mt-6 lg:mt-0">
+      <div class="flex flex-col items-start justify-between lg:pl-6 w-full mt-6 lg:mt-0">
         <div class="flex flex-col items-start w-full">
           <div class="flex flex-row items-center justify-between w-full">
 
@@ -262,10 +262,10 @@
 
 
   </div>
-  <div class="flex flex-row items-center">
+  <!-- <div class="flex flex-row items-center">
     <span class="prevArrow">이전</span>
     <span class="nextArrow">다음</span>
-  </div>
+  </div> -->
 </div>
 <style>
   .slide {
@@ -291,8 +291,8 @@
       rows: 0,
       arrows: false,
       dots: false,
-      prevArrow: $('.prevArrow'),
-      nextArrow: $('.nextArrow'),
+      // prevArrow: $('.prevArrow'),
+      // nextArrow: $('.nextArrow'),
       responsive: [{
         breakpoint: 1024,
         settings: {
