--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -61,36 +61,38 @@
         </div>
 
         <div class="flex flex-col items-start col-span-1 lg:col-span-4">
-          <p class="text-slate500">Created At</p>
-          <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
-            <label name="createdAt_id_sort_up" for="createdAt_id_sort_up" class="box-radio-input flex flex-col items-center ">
-              <!-- <input type="radio" name="createdAt" id="createdAt_id_sort_up" value='1'> -->
-              <input type="radio" name="createdAt" id="createdAt_id_sort_up" value='1' {% if form.createdAt == 1 %}checked{% endif %}>
-              <span>
-                <i class="bi bi-arrow-up"></i></span>
-            </label>
-            <label name="createdAt_id_sort_down" for="createdAt_id_sort_down" class="box-radio-input flex flex-col items-center">
-              <input type="radio" name="createdAt" id="createdAt_id_sort_down" value='0'>
-              <!-- <input type="radio" name="createdAt" id="createdAt_id_sort_down" value='0' {% if form.createdAt == 0 %}checked{% endif %}> -->
-              <span><i class=" bi bi-arrow-down"></i></span>
-            </label>
-          </div>
+          <label for="createdAt" class="text-slate500">Created At</label>
+          <select id="createdAt" name="createdAt" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+            <option value="0" {% if form.s_types == 0 %}selected{% endif %}>
+              Newest to Oldest
+            </option>
+            <option value="1" {% if form.s_types == 0 %}selected{% endif %}>
+              Oldest to Newest
+            </option>
+          </select>
         </div>
         <div class="flex flex-col items-start col-span-1 lg:col-span-4">
-          <p class="text-slate500">Price</p>
-          <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
+
+          < <label for="price" class="text-slate500">Price</label>
+            <select id="price" name="price" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+              <option value="0" {% if form.s_types == 0 %}selected{% endif %}>
+                Price:low to high
+              </option>
+              <option value="1" {% if form.s_types == 0 %}selected{% endif %}>
+                Price:high to low
+              </option>
+            </select>
+            <!-- <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
             <label name="price_id_sort_up" for="price_id_sort_up" class="box-radio-input flex flex-col items-center ">
-              <!-- <input type="radio" name="price" id="price_id_sort_up" value='1' {% if form.price == 1 %}checked{% endif %}> -->
-              <input type="radio" name="price" id="price_id_sort_up" value='1'>
+              <input type="radio" name="price" id="price_id_sort_up" value='1' {% if form.price == 1 %}checked{% endif %}>
               <span>
                 <i class="bi bi-arrow-up"></i></span>
             </label>
             <label name="price_id_sort_down" for="price_id_sort_down" class="box-radio-input flex flex-col items-center">
-              <input type="radio" name="price" id="price_id_sort_down" value='0'>
-              <!-- <input type="radio" name="price" id="price_id_sort_down" value='0' {% if form.price == 0 %}checked{% endif %}> -->
+              <input type="radio" name="price" id="price_id_sort_down" value='0' {% if form.price == 0 %}checked{% endif %}>
               <span><i class=" bi bi-arrow-down"></i></span>
             </label>
-          </div>
+          </div> -->
 
         </div>
         <div class="flex flex-col items-center justify-end col-span-1 lg:col-span-4">
@@ -103,7 +105,7 @@
       </form> -->
     </div>
   </div>
-  <section style="" class="mt-24 container mx-auto">
+  <section class="mt-24 container mx-auto pb-12">
 
     {% if products.count > 0 %}
 
