--- a/templates/about.html
+++ b/templates/about.html
@@ -27,9 +27,9 @@
   <div class="flex flex-col items-center w-full mt-12">
     <div class="flex flex-col items-center justify-center w-full pt-24 ">
       <div class="flex flex-col items-center justify-center h-full">
-        <h2 class="mt-2 text-2xl lg:text-5xl text-white">K-NFT Authors</h2>
+        <h2 class="mt-2 text-2xl lg:text-5xl text-white">K-NFT Artists</h2>
         <p class="mt-6 text-xl text-slate500 font-extralight">
-          {{authors.count}} authors
+          {{authors.count}} Artists
         </p>
       </div>
     </div>
