--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -129,7 +129,7 @@
               <source src="{{product.image.file360.url}}" />
             </video>
             {% else %}
-            <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
+            <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer object-cover " />
             {% endif %}
           </div>
           <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
