--- a/templates/main.html
+++ b/templates/main.html
@@ -51,11 +51,11 @@
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
           {% if product.image.content_type == "mp4" %}
-          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px">
+          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full">
             <source src="{{product.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{product.image.file360.url}}" style="height: 300px" class="cursor-pointer object-cover" />
+          <img src="{{product.image.file360.url}}" class="cursor-pointer object-cover w-full" />
           {% endif %}
         </div>
         <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
