--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -98,11 +98,11 @@
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if project.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="aspect-ratio: 1" playsinline>
+              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="aspect-ratio: 1/1;" playsinline>
                 <source src="{{project.image.file360.url}}" />
               </video>
               {% else %}
-              <img src="{{project.image.file360.url}}" style="aspect-ratio: 1" class="cursor-pointer w-full object-cover" />
+              <img src="{{project.image.file360.url}}" style="aspect-ratio: 1/1;" class="cursor-pointer w-full object-cover" />
               {% endif %}
             </div>
             <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;">
