--- a/templates/main.html
+++ b/templates/main.html
@@ -47,15 +47,15 @@
   <p class="mt-6 text-lg font-light tracking-wider text-justify text-slate500">K-NFT introduces Hangul Calligraphy, a hand-drawn pictogram. Enjoy the works of 'Love', the theme of which were written by Korea's leading calligraphers.</p>
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 lg:gap-24 mt-12 justify-items-center">
     {% for product in main_product  %}
-    <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
+    <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg ">
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
           {% if product.image.content_type == "mp4" %}
-          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
+          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="aspect-ratio: 1/1;">
             <source src="{{product.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer object-cover " />
+          <img src="{{product.image.file360.url}}" style="aspect-ratio: 1/1;" class="cursor-pointer object-cover " />
           {% endif %}
         </div>
         <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
