--- a/templates/main.html
+++ b/templates/main.html
@@ -48,17 +48,17 @@
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 lg:gap-24 mt-12 justify-items-center">
     {% for product in main_product  %}
     <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg ">
-      <div id="fontCard" class="flex flex-col items-start w-full h-full">
+      <div id="fontCard" class="flex flex-col items-start w-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
           {% if product.image.content_type == "mp4" %}
-          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="aspect-ratio: 1/1;">
+          <video autoplay muted playsinline loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="aspect-ratio: 1/1;">
             <source src="{{product.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{product.image.file360.url}}" style="aspect-ratio: 1/1;" class="cursor-pointer object-cover " />
+          <img src="{{product.image.file360.url}}" style="aspect-ratio: 1/1;" class="cursor-pointer object-cover w-full" />
           {% endif %}
         </div>
-        <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
+        <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px">
           <p class="text-xl font-bold line-clamp-1">{{product.title}}</p>
           <div class="flex flex-row items-end justify-between w-full">
             <div class="flex flex-col items-start">
